RESOLVED FIXED57569
Web process sometimes fails to launch when there are spaces in its path
https://bugs.webkit.org/show_bug.cgi?id=57569
Summary Web process sometimes fails to launch when there are spaces in its path
Adam Roben (:aroben)
Reported 2011-03-31 13:16:31 PDT
Web process sometimes fails to launch when there are spaces in its path
Attachments
Patch (1.75 KB, patch)
2011-03-31 13:16 PDT, Adam Roben (:aroben)
sfalken: review+
Adam Roben (:aroben)
Comment 1 2011-03-31 13:16:56 PDT
WebKit Review Bot
Comment 2 2011-03-31 13:18:27 PDT
Attachment 87777 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3 2011-03-31 13:22:17 PDT
Note You need to log in before you can comment on or make changes to this bug.