Quote the executable path we pass to ::CreateProcessW

This will ensure that spaces in the path will be interpreted correctly.

Fixes <http://webkit.org/b/57569> Web process sometimes fails to launch when there are
spaces in its path

Reviewed by Steve Falkenburg.

* UIProcess/Launcher/win/ProcessLauncherWin.cpp:
(WebKit::ProcessLauncher::launchProcess): Surround the executable path in quotes.

Canonical link: https://commits.webkit.org/72405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82610 268f45cc-cd09-0410-ab3c-d52691b4dbfc